[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vobiz"
version = "0.1.0"
description = "The official Python SDK for the Vobiz voice & telephony platform."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Vobiz", email = "support@vobiz.ai" }]
keywords = ["vobiz", "voice", "telephony", "sip", "sdk"]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://vobiz.ai"
Documentation = "https://docs.vobiz.ai"
Repository = "https://github.com/vobiz-ai/vobiz-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vobiz = ["py.typed"]
